--- a/Presentations/Web_Based_Distribution_of_Research_Using_GitHub.Rmd
+++ b/Presentations/Web_Based_Distribution_of_Research_Using_GitHub.Rmd
@@ -18,6 +18,7 @@ output:
       xaringanExtra = 'default',
       xExtra_use = c('share_again', 'slide_tone', 'tile_view', 'clipboard'))
 ---
+layout: true
 
 ```{r metadata, echo=FALSE}
 # creating HTML metadata to accompany the slides
