--- a/Presentations/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub.Rmd
+++ b/Presentations/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub.Rmd
@@ -27,7 +27,7 @@ library(metathis)
 meta() %>%
   meta_general(
     description = "The final presentation of the NCME 2022 Demonstration Session on Using GitHub for Open-Source Analytics, Reporting, and Dissemination of Research",
-    subject = "Consolidating Analysis and Dissemination of Research using GitHub",
+    subject = "Consolidating Analysis and Dissemination of Research Using GitHub",
     generator = "xaringan and remark.js",
     theme_color = "#b6e202"
   ) %>% 
@@ -36,7 +36,7 @@ meta() %>%
     title = "Consolidating Analysis and Dissemination of Research using GitHub • NCME 2022 • Nathan Dadey",
     url = "https://centerforassessment.github.io/NCME_2022_Demonstration/articles/presentations/Demonstration_Session_Presentations.html#using-github-to-consolodate-the-analysis-and-dissemination-of-research",
     image = "https://centerforassessment.github.io/NCME_2022_Demonstration/presentations/Consolidating_Analysis_and_Dissemination_of_Research_Using_GitHub_files/TITLE_SLIDE_image.png",
-    image_alt = "Title slide for Consolidating Analysis and Dissemination of Research using GitHub",
+    image_alt = "Title slide for Consolidating Analysis and Dissemination of Research Using GitHub",
     og_type = "article",
     og_locale = "en_US",
     og_author = "Nathan Dadey",
